# weaver

./: .clang-format  CMakeLists.txt  acq.py  cvt.py  gen.py  gen_ca.py  inspect_trace.py  trk.py
include/weaver/: acq.h  channel.h  corr.h  gps.h  kalman.h  kalman_loop_filter.h  loop_filter.h  math.h  pvt.h  signal.h  sim.h  systems.h  types.h  util.h
include/weaver/dsp/: code.h  kernels.h  kernels_avx2.h  kernels_generic.h
src/weaver/: bump.cpp
tests/: kernels.cpp  sim.cpp
